--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -56,7 +56,6 @@ h1 {
     margin-left: 160px; }
   .wcalc__box {
     position: relative;
-    display: block;
     margin: 0; }
     .wcalc__box--1 {
       display: block;
@@ -68,13 +67,27 @@ h1 {
       width: 350px;
       background: url("../images/f2.png") no-repeat center;
       background-size: 100%; }
-  .wcalc__frame {
+    .wcalc__box--3 {
+      display: block;
+      width: 346px;
+      background: url("../images/f3.png") no-repeat top;
+      background-size: 100%; }
+    .wcalc__box--4 {
+      display: block;
+      width: 515px;
+      background: url("../images/f4.png") no-repeat center;
+      background-size: cover; }
+  .wcalc__frame--1 {
     height: 340px; }
-    .wcalc__frame img {
-      opacity: 0;
-      padding: 8px 0;
-      padding-left: 10px;
-      transition: all .5s ease 0s; }
+  .wcalc__frame--2 {
+    height: 340px; }
+  .wcalc__frame--3 {
+    height: 103px; }
+  .wcalc__frame img {
+    opacity: 0;
+    padding: 8px 0;
+    padding-left: 10px;
+    transition: all .5s ease 0s; }
   .wcalc__option {
     position: absolute;
     background-color: #fff;
@@ -87,7 +100,7 @@ h1 {
     .wcalc__option p {
       font-size: 10px;
       margin: 0;
-      padding: 5px 10px;
+      padding: 5px 15px;
       text-transform: uppercase;
       cursor: pointer; }
       .wcalc__option p:hover {
@@ -100,6 +113,13 @@ h1 {
 .checked {
   background-color: #3B7EB5;
   color: #fff; }
+  .checked:before {
+    position: absolute;
+    left: 4px;
+    content: "\27a4"; }
+
+.isframe {
+  display: block !important; }
 
 .noframe {
   display: none; }
@@ -135,6 +155,14 @@ h1 {
   transform: perspective(300px) rotateX(0deg);
   transform-origin: 50% 70% 0px;
   animation-name: effect-two-reverse;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+  animation-delay: .5s; }
+
+.effect-3:hover {
+  transform: perspective(300px) rotateX(0deg);
+  transform-origin: 50% 70% 0px;
+  animation-name: effect-three;
   animation-duration: 5s;
   animation-iteration-count: infinite;
   animation-delay: .5s; }
@@ -198,3 +226,13 @@ h1 {
   100% {
     transform: perspective(800px) rotateY(0deg);
     transform-origin: 0 50% 0px; } }
+
+@keyframes effect-three {
+  0% {
+    transform: perspective(200px) rotateX(0deg); }
+  13% {
+    transform: perspective(200px) rotateX(-4deg); }
+  26% {
+    transform: perspective(200px) rotateX(0deg); }
+  100% {
+    transform: perspective(200px) rotateX(0deg); } }
