--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 /* ------------------------------------
     Header Styles
 ------------------------------------- */
@@ -75,7 +74,6 @@ h1 {
 
   &__box {
     position: relative;
-    display:block;
     margin:0;
     &--1 {
       display:block;
@@ -89,10 +87,31 @@ h1 {
       background: url('../images/f2.png') no-repeat center;
       background-size: 100%;
     }
+    &--3 {
+      display: block;
+      width: 346px;
+      background: url('../images/f3.png') no-repeat top;
+      background-size: 100%;
+    }
+    &--4 {
+      display: block;
+      width:515px;
+      background: url('../images/f4.png') no-repeat center;
+      background-size: cover;
+    }
   }
 
   &__frame {
-    height: 340px;
+    &--1 {
+      height: 340px;
+    }
+    &--2 {
+      height: 340px;
+    }
+    &--3 {
+      height: 103px;
+    }
+    
     img {
       opacity:0;
       padding:8px 0;
@@ -113,7 +132,7 @@ h1 {
     p {
       font-size: 10px;
       margin: 0;
-      padding:5px 10px;
+      padding:5px 15px;
       text-transform: uppercase;
       cursor: pointer;
       &:hover {
@@ -133,6 +152,15 @@ h1 {
 .checked {
   background-color: #3B7EB5;
   color: #fff;
+  &:before {
+    position: absolute;
+    left:4px;
+    content: "\27a4";
+  }
+}
+
+.isframe {
+  display:block !important;
 }
 
 .noframe {
@@ -176,218 +204,15 @@ h1 {
     animation-iteration-count: infinite;
     animation-delay: .5s;
   }
-}
-
-@keyframes effect-one {
-    0%   {transform: perspective(800px) rotateY(0deg);}
-    13%  {transform: perspective(800px) rotateY(35deg);}
-    26% {transform: perspective(800px) rotateY(0deg);}
-    100% {transform: perspective(800px) rotateY(0deg);}
-}
-
-@keyframes effect-one-reverse {
-    0%   {transform: perspective(800px) rotateY(0deg);}
-    13%  {transform: perspective(800px) rotateY(-35deg);}
-    26% {transform: perspective(800px) rotateY(0deg);}
-    100% {transform: perspective(800px) rotateY(0deg);}
-}
-
-@keyframes effect-two {
-    0%   {transform: perspective(800px) rotateY(0deg); transform-origin: 100% 50% 0px;}
-    10%  {transform: perspective(800px) rotateY(35deg); transform-origin: 100% 50% 0px;}
-    20% {transform: perspective(800px) rotateY(0deg); transform-origin: 100% 50% 0px;}
-    21% {transform: perspective(400px) rotateX(0deg);}
-    30% {transform: perspective(400px) rotateX(-3deg);}
-    40% {transform: perspective(400px) rotateX(0deg);}
-    100% {transform: perspective(800px) rotateY(0deg); transform-origin: 100% 50% 0px;}
-}
-
-@keyframes effect-two-reverse {
-    0%   {transform: perspective(800px) rotateY(0deg); transform-origin: 0 50% 0px;}
-    10%  {transform: perspective(800px) rotateY(-35deg); transform-origin: 0 50% 0px;}
-    20% {transform: perspective(800px) rotateY(0deg); transform-origin: 0 50% 0px;}
-    21% {transform: perspective(400px) rotateX(0deg);}
-    30% {transform: perspective(400px) rotateX(-3deg);}
-    40% {transform: perspective(400px) rotateX(0deg);}
-    100% {transform: perspective(800px) rotateY(0deg); transform-origin: 0 50% 0px;}
-}
-=======
-/* ------------------------------------
-    Header Styles
-------------------------------------- */
-* {
-  margin:0 auto;
-}
-
-h1 {
-    color: deepskyblue;
-    margin-top: 40px;
-}
-
-.wcalc {
-  width: 960px;
-  &__heading {
-    font-size: 18px;
-    font-weight: bold;
-  }
-  &__icons {
-    list-style: none;
-    padding: 0;
-    li {
-      background-color: #fff;
-      display: table-cell;
-      padding: 15px;
-      vertical-align: middle;
-      &:hover {
-        background-color: #508FD3;
-      }
-      &:hover .wcalc__heading {
-        color: #fff;
-      }
-    }
-  }
-  &__measures {
-    float: left;
-  }
-
-  &__size {
-    ul {
-      margin:20px 0;
-      width: 140px;
-      padding:10px;
-      padding-top:0;
-      list-style: none;
-      border:1px solid #ccc;
-      li {
-        font-size: 14px;
-        p {
-          padding-top:10px;
-          padding-bottom: 5px;
-          margin: 0;
-          color: #373A3C;
-        }
-        input {
-          border-radius:0;
-          border:1px solid #ccc;
-          padding-left:5px;
-        }
-        input[type="checkbox"] {
-          margin:5px;
-        }
-        span {
-          padding-left:30px;
-          font-size: 12px;
-          color: #ссс;
-        }
-      }
-    }
-  }
-  &__models {
-    margin-left: 160px;
-  }
-
-  &__box {
-    position: relative;
-    display:block;
-    margin:0;
-    &--1 {
-      display:block;
-      width:180px;
-      background: url('../images/f1.png') no-repeat center;
-      background-size: cover;
-    }
-    &--2 {
-      display:block;
-      width: 350px;
-      background: url('../images/f2.png') no-repeat center;
-      background-size: 100%;
-    }
-  }
-
-  &__frame {
-    height: 340px;
-    img {
-      opacity:0;
-      padding:8px 0;
-      padding-left: 10px;
-      transition: all .5s ease 0s;
-    }
-  }
-
-  &__option {
-    position: absolute;
-    background-color: #fff;
-    width:100px;
-    left: 40px;
-    top: 60px;
-    border-radius: 5px;
-    overflow: hidden;
-    z-index:2;
-    p {
-      font-size: 10px;
-      margin: 0;
-      padding:5px 10px;
-      text-transform: uppercase;
-      cursor: pointer;
-      &:hover {
-        background-color: #3B7EB5;
-        color: #fff;
-      }
-
-    }
-  }
-
-}
-
-.active {
-  opacity:1 !important;
-}
-
-.checked {
-  background-color: #3B7EB5;
-  color: #fff;
-}
-
-.noframe {
-  display: none;
-}
-
-.left-float {
-  float: left;
-}
-
-.effect {
-  &-1 {
-    transform: perspective(800px) rotateY(0deg);
-    transform-origin: 100% 50% 0px;
-    animation-name:effect-one;
-    animation-duration:4s;
-    animation-iteration-count: infinite;
-    animation-delay: .5s;
-  }
-  &-1-reverse {
-    transform: perspective(800px) rotateY(0deg);
-    transform-origin: 0 50% 0;
-    animation-name:effect-one-reverse;
-    animation-duration:4s;
-    animation-iteration-count: infinite;
-    animation-delay: .5s;
-  }
-  &-2 {
+  &-3 {
+    &:hover {
     transform: perspective(300px) rotateX(0deg);
     transform-origin: 50% 70% 0px;
-    animation-name:effect-two;
+    animation-name:effect-three;
     animation-duration:5s;
     animation-iteration-count: infinite;
     animation-delay: .5s;
-  }
-  &-2-reverse {
-    transform: perspective(300px) rotateX(0deg);
-    transform-origin: 50% 70% 0px;
-    animation-name:effect-two-reverse;
-    animation-duration:5s;
-    animation-iteration-count: infinite;
-    animation-delay: .5s;
+    }
   }
 }
 
@@ -424,4 +249,10 @@ h1 {
     40% {transform: perspective(400px) rotateX(0deg);}
     100% {transform: perspective(800px) rotateY(0deg); transform-origin: 0 50% 0px;}
 }
->>>>>>> a687e0d51235f2f3af863a9788800b6a74ae1703
+
+@keyframes effect-three {
+    0% {transform: perspective(200px) rotateX(0deg);}
+    13% {transform: perspective(200px) rotateX(-4deg);}
+    26% {transform: perspective(200px) rotateX(0deg);}
+    100% {transform: perspective(200px) rotateX(0deg);}
+}
