--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,45 +55,58 @@ h1 {
   .wcalc__models {
     margin-left: 160px; }
   .wcalc__box {
-    position: relative;
-    margin: 0; }
+    display: none;
+    margin: 0;
+    height: 360px; }
     .wcalc__box--1 {
-      display: block;
+      padding-top: 16px;
+      padding-left: 6px;
       width: 180px;
       background: url("../images/f1.png") no-repeat center;
       background-size: cover; }
     .wcalc__box--2 {
-      display: block;
+      padding-top: 14px;
+      padding-left: 10px;
       width: 350px;
       background: url("../images/f2.png") no-repeat center;
       background-size: 100%; }
     .wcalc__box--3 {
-      display: block;
-      width: 346px;
+      padding-top: 14px;
+      padding-left: 12px;
+      width: 350px;
       background: url("../images/f3.png") no-repeat top;
       background-size: 100%; }
     .wcalc__box--4 {
-      display: block;
-      width: 515px;
+      padding-top: 14px;
+      padding-left: 8px;
+      width: 518px;
       background: url("../images/f4.png") no-repeat center;
       background-size: cover; }
-  .wcalc__frame--1 {
-    height: 340px; }
-  .wcalc__frame--2 {
-    height: 340px; }
-  .wcalc__frame--3 {
-    height: 103px; }
-  .wcalc__frame img {
-    opacity: 0;
-    padding: 8px 0;
-    padding-left: 10px;
-    transition: all .5s ease 0s; }
+    .wcalc__box--5 {
+      width: 160px;
+      background: url("../images/f5.png") no-repeat center; }
+    .wcalc__box--6 {
+      padding: 8px;
+      width: 493px;
+      height: 358px;
+      background: url("../images/f6.png") no-repeat center; }
+  .wcalc__frame--1, .wcalc__frame--2 {
+    position: relative; }
+    .wcalc__frame--1 img, .wcalc__frame--2 img {
+      padding-top: 4px;
+      padding-left: 4px;
+      opacity: 0;
+      transition: all .5s ease 0s; }
+  .wcalc__frame--3, .wcalc__frame--4 {
+    position: relative; }
+    .wcalc__frame--3 img, .wcalc__frame--4 img {
+      padding-left: 4px;
+      opacity: 0;
+      transition: all .5s ease 0s; }
   .wcalc__option {
     position: absolute;
     background-color: #fff;
     width: 100px;
-    left: 40px;
-    top: 60px;
     border-radius: 5px;
     overflow: hidden;
     z-index: 2; }
@@ -106,12 +119,21 @@ h1 {
       .wcalc__option p:hover {
         background-color: #3B7EB5;
         color: #fff; }
+    .wcalc__option--1 {
+      left: 35px;
+      top: 25px; }
+    .wcalc__option--2 {
+      right: 35px;
+      top: 25px; }
+    .wcalc__option--3 {
+      left: 200px;
+      top: 25px; }
 
 .active {
   opacity: 1 !important; }
 
 .checked {
-  background-color: #3B7EB5;
+  background-color: #3B7EB5 !important;
   color: #fff; }
   .checked:before {
     position: absolute;
@@ -159,9 +181,9 @@ h1 {
   animation-iteration-count: infinite;
   animation-delay: .5s; }
 
-.effect-3:hover {
+.effect-3 {
   transform: perspective(300px) rotateX(0deg);
-  transform-origin: 50% 70% 0px;
+  transform-origin: 50% 100% 0px;
   animation-name: effect-three;
   animation-duration: 5s;
   animation-iteration-count: infinite;
@@ -229,10 +251,10 @@ h1 {
 
 @keyframes effect-three {
   0% {
-    transform: perspective(200px) rotateX(0deg); }
+    transform: perspective(800px) rotateX(0deg); }
   13% {
-    transform: perspective(200px) rotateX(-4deg); }
+    transform: perspective(800px) rotateX(-24deg); }
   26% {
-    transform: perspective(200px) rotateX(0deg); }
+    transform: perspective(800px) rotateX(0deg); }
   100% {
-    transform: perspective(200px) rotateX(0deg); } }
+    transform: perspective(800px) rotateX(0deg); } }
