--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -73,50 +73,66 @@ h1 {
   }
 
   &__box {
-    position: relative;
+    display:none;
     margin:0;
+    height: 360px;
     &--1 {
-      display:block;
+      padding-top:16px;
+      padding-left: 6px;
       width:180px;
       background: url('../images/f1.png') no-repeat center;
       background-size: cover;
     }
     &--2 {
-      display:block;
+      padding-top:14px;
+      padding-left: 10px;
       width: 350px;
       background: url('../images/f2.png') no-repeat center;
       background-size: 100%;
     }
     &--3 {
-      display: block;
-      width: 346px;
+      padding-top: 14px;
+      padding-left: 12px;
+      width: 350px;
       background: url('../images/f3.png') no-repeat top;
       background-size: 100%;
     }
     &--4 {
-      display: block;
-      width:515px;
+      padding-top:14px;
+      padding-left: 8px;
+      width:518px;
       background: url('../images/f4.png') no-repeat center;
       background-size: cover;
+    }
+    &--5 {
+      width: 160px;
+      background:url('../images/f5.png') no-repeat center;
+    }
+    &--6 {
+      padding: 8px;
+      width:493px;
+      height: 358px;
+      background: url('../images/f6.png') no-repeat center;
     }
   }
 
   &__frame {
-    &--1 {
-      height: 340px;
+    &--1, &--2 {
+      position: relative;
+      img {
+        padding-top: 4px;
+        padding-left: 4px;
+        opacity:0;
+        transition: all .5s ease 0s;
+      }
     }
-    &--2 {
-      height: 340px;
-    }
-    &--3 {
-      height: 103px;
-    }
-    
-    img {
-      opacity:0;
-      padding:8px 0;
-      padding-left: 10px;
-      transition: all .5s ease 0s;
+    &--3, &--4 {
+      position: relative;
+      img {
+        padding-left: 4px;
+        opacity:0;
+        transition: all .5s ease 0s;
+      }
     }
   }
 
@@ -124,8 +140,6 @@ h1 {
     position: absolute;
     background-color: #fff;
     width:100px;
-    left: 40px;
-    top: 60px;
     border-radius: 5px;
     overflow: hidden;
     z-index:2;
@@ -139,7 +153,18 @@ h1 {
         background-color: #3B7EB5;
         color: #fff;
       }
-
+    }
+    &--1 {
+      left: 35px;
+      top: 25px;
+    }
+    &--2 {
+      right: 35px;
+      top: 25px;
+    }
+    &--3 {
+      left: 200px;
+      top: 25px;
     }
   }
 
@@ -150,7 +175,7 @@ h1 {
 }
 
 .checked {
-  background-color: #3B7EB5;
+  background-color: #3B7EB5 !important;
   color: #fff;
   &:before {
     position: absolute;
@@ -205,14 +230,12 @@ h1 {
     animation-delay: .5s;
   }
   &-3 {
-    &:hover {
     transform: perspective(300px) rotateX(0deg);
-    transform-origin: 50% 70% 0px;
+    transform-origin: 50% 100% 0px;
     animation-name:effect-three;
     animation-duration:5s;
     animation-iteration-count: infinite;
     animation-delay: .5s;
-    }
   }
 }
 
@@ -251,8 +274,8 @@ h1 {
 }
 
 @keyframes effect-three {
-    0% {transform: perspective(200px) rotateX(0deg);}
-    13% {transform: perspective(200px) rotateX(-4deg);}
-    26% {transform: perspective(200px) rotateX(0deg);}
-    100% {transform: perspective(200px) rotateX(0deg);}
+    0% {transform: perspective(800px) rotateX(0deg);}
+    13% {transform: perspective(800px) rotateX(-24deg);}
+    26% {transform: perspective(800px) rotateX(0deg);}
+    100% {transform: perspective(800px) rotateX(0deg);}
 }
