--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -14,6 +14,8 @@ h1 {
 .wcalc {
   width: 960px;
   &__heading {
+    margin:0;
+    padding: 10px 0;
     font-size: 18px;
     font-weight: bold;
   }
@@ -206,7 +208,7 @@ h1 {
     animation-name:effect-one;
     animation-duration:4s;
     animation-iteration-count: infinite;
-    animation-delay: .5s;
+    animation-delay: .2s;
   }
   &-1-reverse {
     transform: perspective(800px) rotateY(0deg);
@@ -214,7 +216,7 @@ h1 {
     animation-name:effect-one-reverse;
     animation-duration:4s;
     animation-iteration-count: infinite;
-    animation-delay: .5s;
+    animation-delay: .2s;
   }
   &-2 {
     transform: perspective(300px) rotateX(0deg);
@@ -222,7 +224,7 @@ h1 {
     animation-name:effect-two;
     animation-duration:5s;
     animation-iteration-count: infinite;
-    animation-delay: .5s;
+    animation-delay: .2s;
   }
   &-2-reverse {
     transform: perspective(300px) rotateX(0deg);
@@ -230,7 +232,7 @@ h1 {
     animation-name:effect-two-reverse;
     animation-duration:5s;
     animation-iteration-count: infinite;
-    animation-delay: .5s;
+    animation-delay: .2s;
   }
   &-3 {
     transform: perspective(300px) rotateX(0deg);
@@ -238,7 +240,7 @@ h1 {
     animation-name:effect-three;
     animation-duration:5s;
     animation-iteration-count: infinite;
-    animation-delay: .5s;
+    animation-delay: .2s;
   }
 }
 
