--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -139,14 +139,161 @@ h1 {
   .wcalc__profile {
     float: right; }
   .wcalc__profcontainer {
+    display: table;
+    position: relative;
+    background-color: #fff;
+    margin: 20px;
+    margin-left: 20px;
+    margin-right: 0;
+    padding-top: 10px;
+    width: 230px;
     border: 1px solid #ccc;
-    border-collapse: collapse; }
+    border-collapse: collapse;
+    line-height: 2; }
   .wcalc__profitem {
-    font-size: 18px; }
+    display: table-row;
+    font-size: 16px;
+    border-bottom: 1px solid #ccc; }
     .wcalc__profitem span, .wcalc__profitem div {
-      padding: 15px 20px; }
+      font-weight: bold;
+      padding: 10px; }
+    .wcalc__profitem:hover .wcalc__profdescription {
+      display: block; }
+      .wcalc__profitem:hover .wcalc__profdescription .wcalc__blitz li:nth-child(1) span {
+        animation-name: profmark-7;
+        animation-duration: .5s;
+        animation-iteration-count: 1; }
+      .wcalc__profitem:hover .wcalc__profdescription .wcalc__blitz li:nth-child(2) span {
+        animation-name: profmark-7;
+        animation-duration: .5s;
+        animation-iteration-count: 1; }
+      .wcalc__profitem:hover .wcalc__profdescription .wcalc__blitz li:nth-child(3) span {
+        animation-name: profmark-8;
+        animation-duration: .5s;
+        animation-iteration-count: 1; }
+      .wcalc__profitem:hover .wcalc__profdescription .wcalc__delight li:nth-child(1) span {
+        animation-name: profmark-8;
+        animation-duration: .5s;
+        animation-iteration-count: 1; }
+      .wcalc__profitem:hover .wcalc__profdescription .wcalc__delight li:nth-child(2) span {
+        animation-name: profmark-9;
+        animation-duration: .5s;
+        animation-iteration-count: 1; }
+      .wcalc__profitem:hover .wcalc__profdescription .wcalc__delight li:nth-child(3) span {
+        animation-name: profmark-8;
+        animation-duration: .5s;
+        animation-iteration-count: 1; }
+      .wcalc__profitem:hover .wcalc__profdescription .wcalc__brillant li:nth-child(1) span {
+        animation-name: profmark-9;
+        animation-duration: .5s;
+        animation-iteration-count: 1; }
+      .wcalc__profitem:hover .wcalc__profdescription .wcalc__brillant li:nth-child(2) span {
+        animation-name: profmark-10;
+        animation-duration: .5s;
+        animation-iteration-count: 1; }
+      .wcalc__profitem:hover .wcalc__profdescription .wcalc__brillant li:nth-child(3) span {
+        animation-name: profmark-9;
+        animation-duration: .5s;
+        animation-iteration-count: 1; }
+      .wcalc__profitem:hover .wcalc__profdescription .wcalc__geneo li:nth-child(1) span {
+        animation-name: profmark-10;
+        animation-duration: .5s;
+        animation-iteration-count: 1; }
+      .wcalc__profitem:hover .wcalc__profdescription .wcalc__geneo li:nth-child(2) span {
+        animation-name: profmark-10;
+        animation-duration: .5s;
+        animation-iteration-count: 1; }
+      .wcalc__profitem:hover .wcalc__profdescription .wcalc__geneo li:nth-child(3) span {
+        animation-name: profmark-10;
+        animation-duration: .5s;
+        animation-iteration-count: 1; }
   .wcalc__description-call {
-    display: inline-block; }
+    font-weight: lighter !important;
+    font-size: 14px;
+    color: #9496AB;
+    text-align: right; }
+    .wcalc__description-call:hover {
+      color: #fff; }
+  .wcalc__profdescription {
+    display: none;
+    padding: 20px !important;
+    position: absolute;
+    background-color: #fff;
+    width: 300px;
+    left: -300px;
+    top: -1px;
+    border: 1px solid #ccc;
+    z-index: 3;
+    font-size: 14px;
+    font-weight: normal !important; }
+    .wcalc__profdescription ul {
+      padding-top: 10px; }
+  .wcalc__profmarks {
+    display: inline-block;
+    padding: 0 !important; }
+    .wcalc__profmarks ul {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+      font-size: 12px; }
+      .wcalc__profmarks ul li {
+        position: relative;
+        height: 25px;
+        border: 1px solid #ccc;
+        margin: 10px 0;
+        padding-left: 10px;
+        width: 100%;
+        color: #fff;
+        line-height: 2; }
+        .wcalc__profmarks ul li span {
+          position: absolute;
+          display: block;
+          margin: 0;
+          padding: 0;
+          height: 100%;
+          top: 0;
+          left: 0;
+          text-align: justify;
+          overflow: hidden;
+          z-index: -1; }
+        .wcalc__profmarks ul li:nth-child(1) span {
+          background: #f39c12; }
+        .wcalc__profmarks ul li:nth-child(2) span {
+          background: #2ecc71; }
+        .wcalc__profmarks ul li:nth-child(3) span {
+          background: #3498db; }
+  .wcalc__blitz li {
+    overflow: hidden; }
+    .wcalc__blitz li:nth-child(1) span {
+      width: 70%; }
+    .wcalc__blitz li:nth-child(2) span {
+      width: 70%; }
+    .wcalc__blitz li:nth-child(3) span {
+      width: 80%; }
+  .wcalc__delight {
+    overflow: hidden; }
+    .wcalc__delight li:nth-child(1) span {
+      width: 80%; }
+    .wcalc__delight li:nth-child(2) span {
+      width: 90%; }
+    .wcalc__delight li:nth-child(3) span {
+      width: 80%; }
+  .wcalc__brillant {
+    overflow: hidden; }
+    .wcalc__brillant li:nth-child(1) span {
+      width: 90%; }
+    .wcalc__brillant li:nth-child(2) span {
+      width: 100%; }
+    .wcalc__brillant li:nth-child(3) span {
+      width: 90%; }
+  .wcalc__geneo {
+    overflow: hidden; }
+    .wcalc__geneo li:nth-child(1) span {
+      width: 100%; }
+    .wcalc__geneo li:nth-child(2) span {
+      width: 100%; }
+    .wcalc__geneo li:nth-child(3) span {
+      width: 100%; }
 
 .active {
   opacity: 1 !important; }
@@ -179,6 +326,18 @@ h1 {
 
 .colour--orange {
   color: #FAAA24; }
+
+.back-hover--grey:hover {
+  background-color: #9496AB; }
+
+.back-hover--blue:hover {
+  background-color: #06B8F8; }
+
+.back-hover--green:hover {
+  background-color: #B9D442; }
+
+.back-hover--orange:hover {
+  background-color: #FAAA24; }
 
 .effect-1 {
   transform: perspective(800px) rotateY(0deg);
@@ -289,6 +448,30 @@ h1 {
     transform: perspective(800px) rotateX(0deg); }
   100% {
     transform: perspective(800px) rotateX(0deg); } }
+
+@keyframes profmark-7 {
+  from {
+    width: 0; }
+  to {
+    width: 70%; } }
+
+@keyframes profmark-8 {
+  from {
+    width: 0; }
+  to {
+    width: 80%; } }
+
+@keyframes profmark-9 {
+  from {
+    width: 0; }
+  to {
+    width: 90%; } }
+
+@keyframes profmark-10 {
+  from {
+    width: 0; }
+  to {
+    width: 100%; } }
 
 #sliderVone, #sliderVtwo {
   height: 340px; }
